# CAPD

./: .gitignore  CAPDVersion.txt  CMakeLists.txt  Makefile.am  README.md  bootstrap.sh  configure.ac
capdAlg/: CMakeLists.txt  Makefile.am  configure.ac
capdAlg/docs/src/: header_files.dox  linear_algebra.dox
capdAlg/examples/: Makefile.am  configure.ac
capdAlg/examples/BigIntegers/: CMakeLists.txt  Makefile.am  MpIntExample.cpp
capdAlg/examples/TexWriter/: CMakeLists.txt  Makefile.am  TexWriterExample.cpp  TexWriterExample2.cpp
capdAlg/examples/alglibdemo/: CMakeLists.txt  Makefile.am  alglibdemo.cpp
capdAlg/examples/intervals/: CMakeLists.txt  Makefile.am  example_intervals.dox
capdAlg/examples/matrixAlgorithms/: CMakeLists.txt  Makefile.am  floatMatrixAlgExample.cpp
capdAlg/examples/vectalg/: CMakeLists.txt  Makefile.am  examples_matrixExample.dox  matrixExample.cpp  normExample.cpp  vectorExample.cpp
capdAlg/include/: CMakeLists.txt  Makefile.am
capdAlg/include/capd/: capdAlglib.h
capdAlg/src/capd/: Makefile.am  capdAlg-dev.pc.in  capdAlg-install.pc.in
capdAlg/src/mpcapd/: Makefile.am  mpcapdAlg-dev.pc.in  mpcapdAlg-install.pc.in
capdAlg/tests/: CMakeLists.txt  Makefile.am  configure.ac
capdAlg/tests/basicalg/: CMakeLists.txt  Makefile.am  TexWriterTest.cpp
capdAlg/tests/complex/: CMakeLists.txt  DComplexTests.cpp  IComplexTests.cpp  Makefile.am
capdAlg/tests/intervalTest/: CMakeLists.txt  Makefile.am  intervalTest.cpp
capdAlg/tests/intvtst/: CMakeLists.txt  Makefile.am  divtst.cpp  intvtst.cpp  ioTest.cpp
capdAlg/tests/matrixAlgorithms/: CMakeLists.txt  LinearEquationFixtures.cpp  LinearEquationFixtures.h  Makefile.am  PARIInterfaceTest.cpp  QuotientBaseMatrixFixtures.cpp  QuotientBaseMatrixFixtures.h  SmithFixtures.cpp  SmithFixtures.h  SmithFormFactoryTest.cpp  floatMatrixAlgorithmsTest.cpp  intMatrixAlgorithmsTest.cpp  intMatrixAlgorithmsTest_legacy.cpp  matrixAlgorithmsTestMain.cpp  sage_random_matrices.py
capdAlg/tests/mptests/: CMakeLists.txt  Makefile.am  MpIntervalTest.cpp  mpsintest.cpp
capdAlg/tests/vecttst/: C11vectalgInitTest.cpp  CMakeLists.txt  Makefile.am  StaticArrayInitTest.cpp  matrixMDTest.cpp  vectMDTest.cpp  vectalgTestMain.cpp  vecttst.cpp
capdAlg/unitTests/: gtestHeader.h  makeTest  testsConfig
capdAlg/unitTests/intervals/: CMakeLists.txt  DIntervalTest.cpp  DoubleIntervalTest.cpp  DoubleRoundingTest.cpp  IntervalTest.cpp  commonTests.hpp  makefile
capdAux/: CMakeLists.txt  Makefile.am  configure.ac
capdAux/examples/: Makefile.am  configure.ac
capdAux/examples/auxildemo/: BuildInfoMain.cpp  CMakeLists.txt  Makefile.am  argdemo.cpp
capdAux/examples/configFileReader/: CMakeLists.txt  Makefile.am  configFileReader.cpp  configFileReader2.cpp
capdAux/examples/krakdemo/: CMakeLists.txt  Makefile.am  krakdemo.cpp
capdAux/examples/logger/: CMakeLists.txt  Example.h  Makefile.am  logger.cpp
capdAux/include/: CMakeLists.txt  Makefile.am
capdAux/src/capd/: Makefile.am
capdAux/tests/: Makefile.am  configure.ac
capdAux/tests/auxilTests/: BuildInfoTest.cpp  CMakeLists.txt  CRefTest.cpp  LoggerTest.cpp  Makefile.am  auxilTestMain.cpp  functorTest.cpp  skipCommentsIstreamTest.cpp
capdDynSys/: CMakeLists.txt
capdDynSys/docs/: Doxyfile.in  Makefile  main.dox
capdDynSys/examples/: examples.dox
capdDynSys/examples/LorenzPeriodicOrbit/: LorenzPeriodicOrbit.dox
capdDynSys/examples/RosslerChaoticDynamics/: RosslerChaoticDynamics.cpp  RosslerChaoticDynamics.dox
capdDynSys/examples/RosslerPeriodicOrbit/: CMakeLists.txt
capdDynSys/examples/cndemo/: cndemo.dox  cndemo1.cpp
capdDynSys/examples/coveringRelation/: CMakeLists.txt
capdDynSys/examples/encloseTrajectory/: encloseTrajectoryBetweenTimeSteps.cpp
capdDynSys/examples/integrate/: integrate.cpp  integrateVariationalEquation.cpp
capdDynSys/examples/invariantSet/: invSet.cpp
capdDynSys/examples/multiPrecision/: multiprec.dox
capdDynSys/examples/odes/: DTimeMapExample.cpp
capdDynSys/examples/odesrig/: CMakeLists.txt  ITimeMapExample.cpp  odes_rigorous_timemap.dox
capdDynSys/include/capd/: capdlib.h  fdcapdlib.h  mpcapdlib.h
capdDynSys/tests/: CMakeLists.txt
capdDynSys/tests/BasicCurveMaskTest/: C1CurveMaskTest.cpp  compare.h
capdDynSys/tests/BasicSolverMaskTest/: compare.h
capdDynSys/tests/CnSolverTest/: HighOrderTest.cpp  runTests.cpp
capdDynSys/tests/MapMaskTest/: AddMaskTest.cpp  EmptyMaskTest.cpp  MapMaskTest.cpp  SetMaskTest.cpp
capdDynSys/tests/PoincareMapMaskTest/: CMakeLists.txt
capdDynSys/tests/ReversiblePoincareMapTest/: ReversiblePoincareMapTest.cpp
capdDynSys/tests/ReversibleSolverTest/: ReversibleSolverTest.cpp  doTest.h
capdDynSys/tests/SolverGetStepTest/: DFixStep.cpp  checkGetStep.h
capdDynSys/tests/dynset/: AffineSetCommonTest.hpp  AffineSetSpecific.hpp  CenteredAffineSetSpecific.hpp  CenteredDoubletonSpecific.hpp  DoubletonSetSpecific.hpp  FactorReorganizationSpecific.hpp  Pped2SetTest.cpp  Rect2SetTest.cpp
capdDynSys/tests/map/: CMakeLists.txt  atanTest.cpp  (+6 more)
capdDynSys4/: .project  CMakeLists.txt  Makefile.am  configure.ac
capdDynSys4/docs/: Doxyfile  DoxygenLayout.xml
capdDynSys4/examples/: Makefile.am  configure.ac  examples.dox
capdDynSys4/include/: CMakeLists.txt  Makefile.am
capdDynSys4/tests/: CMakeLists.txt  Makefile.am  configure.ac
capdExt/: CMakeLists.txt  Makefile.am  configure.ac
capdExt/cxsc-2-5-4/: .depend  CMakeLists.txt  Makefile.am  Makefile.in  README  changelog  configure.ac  cxsc.sln  cxsc.vcproj  cxsc.vcxproj  cxscconf.h.in  install_cxsc  install_cxsc.in
capdExt/filibsrc/: CMakeLists.txt  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  configure.in
capdExt/include/: CMakeLists.txt
capdMake/libcapd/: CMakeLists.txt  Makefile.am  capd-config-dev.in  capd-config.in  capd-config.local.in  capd-gui-config-dev.in  capd-gui-config.in  capd-gui.pc.in  capd.pc.in  capd.pc.local.in  configure.ac  main_entry.cpp  mpcapd-config-dev.in  mpcapd-config.in  mpcapd-dev.pc.in  mpcapd-gui-config-dev.in  mpcapd-gui-config.in  mpcapd-gui.pc.in  mpcapd.pc.in
(+2657 files in other folders)
